--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@ html, body {
 	font-family: 'Raleway', sans-serif;
 }
 .GreenBackGround{
-	background-color: #71ce7f;
+	background-color: #ce7171;
 }
 .Blog{
 	height: 100%;
